# wasm-component

./: .gitignore  Cargo.toml  README.md  client-expand.wasm  client_expand_rs.wasm
client-expand/: Cargo.toml
client-expand-rs/: Cargo.toml
client-expand-rs/src/: lib.rs
client-expand/src/: lib.rs
client/client-expand-rs/: Cargo.toml
client/client-host/: Cargo.toml
client/client-host-simple/: Cargo.toml
client/client-host-simple/src/: lib.rs
client/client-host/src/: lib.rs
host-expand/: Cargo.toml
host-expand-rs/: Cargo.toml
host-expand/src/: main.rs
host/host-expand-rs/: Cargo.toml
parser/wasmtime-component-macro-fork/src/: bindgen.rs  lib.rs
parser/wit-bindgen-rust-macro-fork/src/: lib.rs
wasmtime-component-macro-fork/: Cargo.toml
wasmtime-component-macro-fork/src/: bindgen.rs  lib.rs
wit/: host.wit  sensor.wit
wit-bindgen-rust-macro-fork/: Cargo.toml
wit-bindgen-rust-macro-fork/src/: lib.rs
