[workspace]
members = ["client-expand", "host-expand", "client-expand-rs"]
resolver = "1"


[workspace.dependencies]
wasmtime = { version = "12.0.1", features = ["component-model"] }
log = "0.4.20"
custom-utils = "0.10.15"
anyhow = "1.0.75"
tokio = {version = "1.32.0", features = ["full"]}

[patch.crates-io]
#wit-parser = {path = "../wasm-tools/crates/wit-parser"}
wit-parser = {git ="https://github.com/jm-observer/wasm-tools.git"}