[package]
name = "host-expand-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]


[dependencies]
log = { workspace = true }
custom-utils = { workspace = true }
anyhow = { workspace = true }
wasmtime = { workspace = true }
prettyplease = "0.2.12"
wasmtime-component-macro-fork = {path = "../wasmtime-component-macro-fork"}
quote = "1.0.33"
syn = "2.0.29"
[dev-dependencies]
custom-utils = "0.10.15"
