[package]
name = "wit-bindgen-rust-macro-fork"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["printing", "derive"] }
quote = "1"
wit-bindgen-core = { version = "0.14.0" }
wit-bindgen-rust = { version = "0.14.0" }
#wit-component = { workspace = true }
anyhow = { workspace = true }
log = "0.4.20"