[package]
name = "client-expand-rs"
version = "0.1.0"
edition = "2021"


[dependencies]
log = { workspace = true }
custom-utils = { workspace = true }
anyhow = { workspace = true }
wit-bindgen = { workspace = true }
wit-bindgen-rust-macro-fork = { path = "../../parser/wit-bindgen-rust-macro-fork" }
syn = "2.0.29"
quote = "1.0.33"
prettyplease = "0.2.12"
