[package]
name = "client-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]


[dependencies]
log = { workspace = true }
custom-utils = { workspace = true }
anyhow = { workspace = true }
#wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", version = "0.14" }
wit-bindgen = { workspace = true }